bugfix(sub header): fix the width to the max screen so that the sub navigation header does not go out of the boundary in zoom out view

--- a/src/components/shared/templates/Templates.scss
+++ b/src/components/shared/templates/Templates.scss
@@ -40,6 +40,7 @@
   height: auto;
   padding: 10px 0px;
   min-height: 80px;
+  max-width: 1800px;
 }
 
 .subNavigationContainer button:hover {
